--- a/Contact/Contact.html
+++ b/Contact/Contact.html
@@ -21,7 +21,7 @@
     <script type = "text/javascript" src="../js.js"></script> 
 
     <div class="fixed-menu bc-color" style="margin-top: -30px;">
-        <a href="../Naslovnica/Naslovnica.html" class="menu-icon"><img src="../Icons/menu.svg" width="40"></a>
+        <a href="../Index.html" class="menu-icon"><img src="../Icons/menu.svg" width="40"></a>
         <nav class="items-center">
             <ul>
                 <li><a href="../Events/Events.html" class="icons"><img src="../Icons/events.svg" width="30"><br><span>Events</span></a></li>
@@ -36,7 +36,7 @@
 
     <div class="section-container">
 
-            <a href="../Naslovnica/Naslovnica.html"><div class="back"><img src="../Icons/back.svg" width="40"></div></a>
+            <a href="../Index.html"><div class="back"><img src="../Icons/back.svg" width="40"></div></a>
 
         <div class="about-header">
             <div class="about-text">
