--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Cirkus</title>
-    <link rel="stylesheet" href="../style.css">
+    <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css" integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU" crossorigin="anonymous">
     
     <link href="https://fonts.googleapis.com/css?family=Faster+One|Redressed&amp;subset=latin-ext" rel="stylesheet">
@@ -19,14 +19,14 @@
 <body>
 
     <div class="fixed-menu menu-opacity">
-        <a href="Naslovnica.html" class="menu-icon"><img src="../Icons/menu.svg" width="40"></a>
+        <a href="Naslovnica.html" class="menu-icon"><img src="Icons/menu.svg" width="40"></a>
         <nav class="items-center">
             <ul>
-                <li><a href="../Events/Events.html" class="icons"><img src="../Icons/events.svg" width="30"><br><span>Events</span></a></li>
-                <li><a href="../About/About.html" class="icons"><img src="../Icons/about.svg" width="30"><br>About</a></li>
-                <li><a href="../Artists/Artists.html" class="icons"><img src="../Icons/artists.svg" width="30"><br>Artists</a></li>
-                <li><a href="../Gallery/Gallery.html" class="icons"><img src="../Icons/gallery.svg" width="30"><br>Gallery</a></li>
-                <li><a href="../Contact/Contact.html" class="icons"><img src="../Icons/contact.svg" width="30"><br>Contact</a></li>
+                <li><a href="Events/Events.html" class="icons"><img src="Icons/events.svg" width="30"><br><span>Events</span></a></li>
+                <li><a href="About/About.html" class="icons"><img src="Icons/about.svg" width="30"><br>About</a></li>
+                <li><a href="Artists/Artists.html" class="icons"><img src="Icons/artists.svg" width="30"><br>Artists</a></li>
+                <li><a href="Gallery/Gallery.html" class="icons"><img src="Icons/gallery.svg" width="30"><br>Gallery</a></li>
+                <li><a href="Contact/Contact.html" class="icons"><img src="Icons/contact.svg" width="30"><br>Contact</a></li>
             </ul>
         </nav>
         <a href="#" class="menu-logo">Iskra</a>
@@ -34,7 +34,7 @@
 
     <header>
         <video autoplay loop id="video-background" muted plays-inline>
-            <source src="../Cirkus.mp4.mp4" type="video/mp4">
+            <source src="Cirkus.mp4.mp4" type="video/mp4">
         </video> 
         <div class="title">
                 <div class="heading">
@@ -61,44 +61,44 @@
             <div class="first-info">
                 <div class="info-card">
                     <div class="date dateZg">
-                        <p><img src="../Icons/date.svg" width="25">10.02.</p>
+                        <p><img src="Icons/date.svg" width="25">10.02.</p>
                     </div>
                     <div class="date dateSt">
-                        <p><img src="../Icons/date.svg" width="25">15.02.</p>
+                        <p><img src="Icons/date.svg" width="25">15.02.</p>
                     </div>
                     <div class="date datePu">
-                        <p><img src="../Icons/date.svg" width="25">20.02.</p>
+                        <p><img src="Icons/date.svg" width="25">20.02.</p>
                     </div>
                     <div class="date dateOs">
-                        <p><img src="../Icons/date.svg" width="25">28.02.</p>
+                        <p><img src="Icons/date.svg" width="25">28.02.</p>
                     </div>
 
 
                     <div class="time timeZg">
-                        <p><img src="../Icons/time.svg" width="25">19:00h</p>
+                        <p><img src="Icons/time.svg" width="25">19:00h</p>
                     </div>
                     <div class="time timeSt">
-                        <p><img src="../Icons/time.svg" width="25">20:00h</p>
+                        <p><img src="Icons/time.svg" width="25">20:00h</p>
                     </div>
                     <div class="time timePu">
-                        <p><img src="../Icons/time.svg" width="25">21:00h</p>
+                        <p><img src="Icons/time.svg" width="25">21:00h</p>
                     </div>
                     <div class="time timeOs">
-                        <p><img src="../Icons/time.svg" width="25">20:00h</p>
+                        <p><img src="Icons/time.svg" width="25">20:00h</p>
                     </div>
 
 
                     <div class="location locationZg">
-                        <p><img src="../Icons/navigation.svg" width="25">Arena Zagreb</p>
+                        <p><img src="Icons/navigation.svg" width="25">Arena Zagreb</p>
                     </div>
                     <div class="location locationSt">
-                        <p><img src="../Icons/navigation.svg" width="25">Spaladium Arena</p>
+                        <p><img src="Icons/navigation.svg" width="25">Spaladium Arena</p>
                     </div>
                     <div class="location locationPu">
-                        <p><img src="../Icons/navigation.svg" width="25">Pulska Arena</p>
+                        <p><img src="Icons/navigation.svg" width="25">Pulska Arena</p>
                     </div>
                     <div class="location locationOs">
-                        <p><img src="../Icons/navigation.svg" width="25">Gradski Vrt</p>
+                        <p><img src="Icons/navigation.svg" width="25">Gradski Vrt</p>
                     </div>
                 </div>
 
@@ -106,21 +106,21 @@
                 <div class="info-text info-textZg">
                     <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Voluptates voluptatum eos molestias eius. Ex illum consectetur deserunt quasi!</p>
                     <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Cumque, eaque.</p>
-                    <a href="#"><img src="../Icons/more.svg" width="40"></a>
+                    <a href="#"><img src="Icons/more.svg" width="40"></a>
                 </div>
                 <div class="info-text info-textSt">
                     <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Voluptates voluptatum eos molestias eius. Ex illum consectetur deserunt quasi!</p>
-                    <a href="#"><img src="../Icons/more.svg" width="40"></a>
+                    <a href="#"><img src="Icons/more.svg" width="40"></a>
                 </div>
                 <div class="info-text info-textPu">
                     <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Voluptates voluptatum eos molestias eius. Ex illum consectetur deserunt quasi!</p>
                     <p>Lorem, ipsum dolor sit amet.</p>
-                    <a href="#"><img src="../Icons/more.svg" width="40"></a>
+                    <a href="#"><img src="Icons/more.svg" width="40"></a>
                 </div>
                 <div class="info-text info-textOs">
                     <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Voluptates voluptatum eos molestias eius. Ex illum consectetur deserunt quasi!</p>
                     <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Cumque, eaque.</p>
-                    <a href="#"><img src="../Icons/more.svg" width="40"></a>
+                    <a href="#"><img src="Icons/more.svg" width="40"></a>
                 </div>
             </div>
 
@@ -130,25 +130,25 @@
     <div class="section-container">
         <section class="section">
             <div class="noColor-section grayscale first-bg">
-                <img src="../Slike/19.jpg">
+                <img src="Slike/19.jpg">
             </div>
             <div class="imgColor-section first-img">
-                <img src="../Slike/69.jpg">
+                <img src="Slike/69.jpg">
             </div>
             <div class="text-section first-text">
                 <h3>Who we are ?</h3>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Commodi, facere? Eos necessitatibus illum quia optio quis explicabo nisi ad ipsum!</p>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Commodi, facere? Eos necessitatibus illum quia optio quis explicabo nisi ad ipsum! Lorem ipsum dolor sit amet consectetur adipisicing elit. Commodi, facere? Eos necessitatibus illum quia optio quis explicabo nisi ad ipsum!</p>
-                <a href="../About/About.html"><img src="../Icons/moreSection.svg" width="40"></a>
+                <a href="About/About.html"><img src="Icons/moreSection.svg" width="40"></a>
             </div>
         </section>
 
         <section class="section sec2">
             <div class="noColor-section grayscale second-bg">
-                <img src="../Slike/17.jpg">
+                <img src="Slike/17.jpg">
             </div>
             <div class="imgColor-section right second-img">
-                <img src="../Slike/14.jpg">
+                <img src="Slike/14.jpg">
             </div>
             <div class="text-section left second-text">
                 <h3>Why Croatia ?</h3>
@@ -159,19 +159,19 @@
         
         <div class="stats">
             <div class="statsPart">
-                <div class="icons"><img src="../Icons/team2.svg" width="100"><br>
+                <div class="icons"><img src="Icons/team2.svg" width="100"><br>
                     <div class="statsText">+20 top <br> performers</div>
                 </div>
             </div>
 
             <div class="statsPart">
-                <div class="icons"><img src="../Icons/competition2.svg" width="100"><br>
+                <div class="icons"><img src="Icons/competition2.svg" width="100"><br>
                     <div class="statsText">+50 excellent <br> performances</div>
                 </div>
             </div>
 
             <div class="statsPart">
-               <div class="icons"><img src="../Icons/fun.svg" width="100"><br>
+               <div class="icons"><img src="Icons/fun.svg" width="100"><br>
                     <div class="statsText">+3 hours of <br> unforgettable fun</div>
                 </div>
             </div>
@@ -182,34 +182,34 @@
         <div class="performances">
             <div class="paris paris-opacity">
                 <div class="parisImg">
-                    <img src="../Slike/70.jpg">
+                    <img src="Slike/70.jpg">
                 </div>
                 <div class="parisText">
-                    <a href="../Gallery/Gallery.html#paris"><h3>21/04 <br> Paris</h3></a>
+                    <a href="Gallery/Gallery.html#paris"><h3>21/04 <br> Paris</h3></a>
                 </div>
             </div>
             <div class="london london-opacity">
                 <div class="londonImg">
-                    <img src="../Slike/55.jpg">
+                    <img src="Slike/55.jpg">
                 </div>
                 <div class="londonText">
-                    <a href="../Gallery/Gallery.html#london"><h3>21/04 <br> London</h3></a>
+                    <a href="Gallery/Gallery.html#london"><h3>21/04 <br> London</h3></a>
                 </div>
             </div>
             <div class="milano milano-opacity">
                 <div class="milanoImg">
-                    <img src="../Slike/20.jpg">
+                    <img src="Slike/20.jpg">
                 </div>
                 <div class="milanoText">
-                    <a href="../Gallery/Gallery.html#milano"><h3>21/04 <br> Milano</h3></a>
+                    <a href="Gallery/Gallery.html#milano"><h3>21/04 <br> Milano</h3></a>
                 </div>
             </div>
             <div class="moskva moskva-opacity">
                 <div class="moskvaImg">
-                    <img src="../Slike/18.jpg">
+                    <img src="Slike/18.jpg">
                 </div>
                 <div class="moskvaText">
-                    <a href="../Gallery/Gallery.html#moskva"><h3>21/04 <br> Moskva</h3></a>
+                    <a href="Gallery/Gallery.html#moskva"><h3>21/04 <br> Moskva</h3></a>
                 </div>
             </div>
         </div>
@@ -238,11 +238,11 @@
                     <h2 class="menu">Menu</h2>
                     <nav class="footer-nav">
                         <ul>
-                            <li><a href="../Events/Events.html">Events <i class="fas fa-caret-right"></i></a></li>
-                            <li><a href="../About/About.html">About <i class="fas fa-caret-right"></i></a></li>
-                            <li><a href="../Artists/Artists.html">Artist <i class="fas fa-caret-right"></i></a></li>
-                            <li><a href="../Gallery/Gallery.html">Gallery <i class="fas fa-caret-right"></i></a></li>
-                            <li><a href="../Contact/Contact.html">Contact <i class="fas fa-caret-right"></i></a></li>
+                            <li><a href="Events/Events.html">Events <i class="fas fa-caret-right"></i></a></li>
+                            <li><a href="About/About.html">About <i class="fas fa-caret-right"></i></a></li>
+                            <li><a href="Artists/Artists.html">Artist <i class="fas fa-caret-right"></i></a></li>
+                            <li><a href="Gallery/Gallery.html">Gallery <i class="fas fa-caret-right"></i></a></li>
+                            <li><a href="Contact/Contact.html">Contact <i class="fas fa-caret-right"></i></a></li>
                         </ul>
                     </nav>
                 </div>
@@ -252,7 +252,7 @@
 
     </div>
 
-    <script type = "text/javascript" src="../js.js"></script> 
+    <script type = "text/javascript" src="index.js"></script> 
 
 </body>
 </html>
